--- a/index.html
+++ b/index.html
@@ -1,14 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>David's Portfolio</title>
 	<link rel="stylesheet" href="style.css">
 </head>
+
+<header>
+	<a href="index.html"><img src="./David’s web dev (1).png" alt="David’s logo" height="150px"></a>
+	<button><a href="#"></a>Projects</button>
+	<button><a href="#"></a>Resume</button>
+	<button><a href="#"></a>Contact</button>
+</header>
+
 <body>
+	<div class="container">
+		<div class="selfie">
+			<img src="./1200px-Missing_photo.svg.png" alt="David’s Picture" height="300px">
+		</div>
+		<div class="about">
+			<h2>About Me</h2>
+		</div>
+		<div class="abouttxt">
+			<p>
+				I am a front end web-developer that enjoys turning complex problems into simple, beautiful and intuitive
+				designs. When I'm not pushing pixels, you'll find me cooking, gardening or backpacking through the
+				backcountry.
+			</p>
+		</div>
+	</div>
 
 	<script src="script.js"></script>
 </body>
+
+<footer>
+	<a href="#">Back to Top</a>
+	<a href="#">Resume</a>
+	<a href="#">Contact</a>
+
+</footer>
+
 </html>
