--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
 </head>
 
 <header>
-	<a href="index.html"><img src="./David’s web dev (1).png" alt="David’s logo" height="150px"></a>
-	<button><a href="#"></a>Projects</button>
-	<button><a href="#"></a>Resume</button>
-	<button><a href="#"></a>Contact</button>
+	<a href="index.html" id="home"><img id="logo" src="./David’s web dev (1).png" alt="David’s logo" height="160px"></a>
+	<nav>
+		<button><a href="#"></a>Projects</button>
+		<button><a href="#"></a>Resume</button>
+		<button><a href="#"></a>Contact</button>
+	</nav>
 </header>
 
 <body>
 	<div class="container">
-		<div class="selfie">
-			<img src="./1200px-Missing_photo.svg.png" alt="David’s Picture" height="300px">
-		</div>
+
+		<img id="selfie" src="./1200px-Missing_photo.svg.png" alt="David’s Picture" height="300px" width="225">
+
 		<div class="about">
 			<h2>About Me</h2>
 		</div>
