--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <header>
-	<a href="index.html" id="home"><img id="logo" src="./David’s web dev (1).png" alt="David’s logo" height="160px"></a>
+	<img id="logo" src="./David’s web dev (1).png" alt="David’s logo" height="160px">
 	<nav>
 		<button><a href="#"></a>Projects</button>
 		<button><a href="#"></a>Resume</button>
