--- a/index.html
+++ b/index.html
@@ -10,28 +10,31 @@
 </head>
 
 <header>
-	<a href="index.html" id="home"><img id="logo" src="./David’s web dev (1).png" alt="David’s logo" height="160px"></a>
+	<img id="logo" src="./David’s web dev (1).png" alt="David’s logo" height="160px">
 	<nav>
-		<button><a href="#"></a>Projects</button>
-		<button><a href="#"></a>Resume</button>
-		<button><a href="#"></a>Contact</button>
+		<a href="#">Projects</a>
+		<a href="#">Resume</a>
+		<a href="#">Contact</a>
 	</nav>
+
 </header>
 
 <body>
 	<div class="container">
+		<div class="aboutimg">
+			<img id="selfie" src="./1200px-Missing_photo.svg.png" alt="David’s Picture" height="300px" width="225">
 
-		<img id="selfie" src="./1200px-Missing_photo.svg.png" alt="David’s Picture" height="300px" width="225">
-
-		<div class="about">
-			<h2>About Me</h2>
-		</div>
-		<div class="abouttxt">
-			<p>
-				I am a front end web-developer that enjoys turning complex problems into simple, beautiful and intuitive
-				designs. When I'm not pushing pixels, you'll find me cooking, gardening or backpacking through the
-				backcountry.
-			</p>
+			<div class="about">
+				<h2>About Me</h2>
+			</div>
+			<div class="abouttxt">
+				<p>
+					I am a front end web-developer that enjoys turning complex problems into simple, beautiful and
+					intuitive
+					designs. When I'm not pushing pixels, you'll find me cooking, gardening or backpacking through the
+					backcountry.
+				</p>
+			</div>
 		</div>
 	</div>
 
@@ -39,9 +42,11 @@
 </body>
 
 <footer>
-	<a href="#">Back to Top</a>
-	<a href="#">Resume</a>
-	<a href="#">Contact</a>
+	<nav class="footer">
+		<a href="#">Back to Top</a>
+		<a href="#">Resume</a>
+		<a href="#">Contact</a>
+	</nav>
 
 
 </footer>
