--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 	<div class="container">
 		<div class="aboutimg">
-			<img id="selfie" src="./1200px-Missing_photo.svg.png" alt="David’s Picture" height="300px" width="225">
+			<img id="selfie" src="./Headshot.jpg" alt="David’s Picture" height="300px" width="225">
 
 			<div class="about">
 				<h2>About Me</h2>
@@ -31,7 +31,8 @@
 				<p>
 					I am a front end web-developer that enjoys turning complex problems into simple, beautiful and
 					intuitive
-					designs. When I'm not pushing pixels, you'll find me cooking, gardening or backpacking through the
+					designs. When I'm not pushing pixels, you'll find me on an ambulance, gardening or backpacking
+					through the
 					backcountry.
 				</p>
 			</div>
