--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<img id="logo" src="./David’s web dev (1).png" alt="David’s logo" height="160px">
 	<nav>
 		<a href="#">Projects</a>
-		<a href="#">Resume</a>
-		<a href="#">Contact</a>
+		<a href="./Admin Resume.pdf" target="_blank">Resume</a>
+		<a href="./contact.html">Contact</a>
 	</nav>
 
 </header>
@@ -44,9 +44,9 @@
 
 <footer>
 	<nav class="footer">
-		<a href="#">Back to Top</a>
-		<a href="#">Resume</a>
-		<a href="#">Contact</a>
+		<a href="index.html">Back to Top</a>
+		<a target="_blank" href="./Admin Resume.pdf">Resume</a>
+		<a href="./contact.html">Contact</a>
 	</nav>
 
 
