--- a/thanks.html
+++ b/thanks.html
@@ -11,14 +11,20 @@
 <header>
     <img id="logo" src="./David’s web dev (1).png" alt="David’s logo" height="160px">
     <nav>
+        <a href="./index.html">Home</a>
         <a href="#">Projects</a>
         <a href="./Admin Resume.pdf" target="_blank">Resume</a>
-        <a href="#">Contact</a>
     </nav>
-
 </header>
 
 <body>
+
+    <div class="thankyou">
+        <div class="thankscontainer">
+            <h2>Thank you!</h2>
+            <p>Please allow 3-5 business days for processing</p>
+        </div>
+    </div>
 
 </body>
 
