--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/x-icon" href="./favicon.ico">
 	<title>David's Portfolio</title>
+	<link rel="icon" type="image/x-icon" href="./favicon.ico">
 	<link rel="stylesheet" href="style.css">
 </head>
 
