--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/x-icon" href="./favicon.ico">
 	<title>David's Portfolio</title>
-	<link rel="icon" type="image/x-icon" href="./favicon.ico">
+	<link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 	<link rel="stylesheet" href="style.css">
 </head>
 
 <header>
-	<img id="logo" src="./David’s web dev (1).png" alt="David’s logo" height="160px">
+	<img id="logo" src="./images/David’s web dev (1).png" alt="David’s logo" height="160px">
 	<nav>
 		<a href="#">Projects</a>
 		<a href="./Admin Resume.pdf" target="_blank">Resume</a>
@@ -24,7 +23,7 @@
 <body>
 	<div class="container">
 		<div class="aboutimg">
-			<img id="selfie" src="./Headshot.jpg" alt="David’s Picture" height="300px" width="225">
+			<img id="selfie" src="./images/Headshot.jpg" alt="David’s Picture" height="300px" width="225">
 
 			<div class="about">
 				<h2>About Me</h2>
