--- a/thanks.html
+++ b/thanks.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank you page</title>
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="./style.css">
 </head>
 <header>
-    <img id="logo" src="./David’s web dev (1).png" alt="David’s logo" height="160px">
+    <img id="logo" src="./images/David’s web dev (1).png" alt="David’s logo" height="160px">
     <nav>
         <a href="./index.html">Home</a>
         <a href="#">Projects</a>
