--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <header>
 	<img id="logo" src="./images/David’s web dev (1).png" alt="David’s logo" height="160px">
 	<nav>
+		<a href="./index.html">Home</a>
 		<a href="#">Projects</a>
 		<a href="./Admin Resume.pdf" target="_blank">Resume</a>
 		<a href="./contact.html">Contact</a>
