--- a/thanks.html
+++ b/thanks.html
@@ -15,6 +15,7 @@
         <a href="./index.html">Home</a>
         <a href="#">Projects</a>
         <a href="./Admin Resume.pdf" target="_blank">Resume</a>
+        <a href="./contact.html">Contact</a>
     </nav>
 </header>
 
