--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 </header>
 
 <body>
-
+    <h2 class="contact">Contact Me</h2>
     <form action="https://formsubmit.co/davidpenagutierrez@gmail.com" method="POST">
         <input type="text" name="name" required placeholder="Name">
         <input type="email" name="email" required placeholder="Email">
